Closed Bug 1844285 Opened 2 years ago Closed 2 years ago

Fails to build on Solaris OS due to missing sys/ioccom.h headers

Categories

(Core :: Widget: Gtk, defect)

defect

Tracking

()

RESOLVED FIXED
117 Branch
Tracking Status
firefox117 --- fixed

People

(Reporter: stransky, Assigned: stransky)

References

Details

Attachments

(1 file)

See Also: → 1840272

Folks, can you answer this question please?

https://phabricator.services.mozilla.com/D182440#inline-1011605

That being said, are there other OSes than solaris that have this header? And do some versions of solaris come without it? Because if it's solaris only and on any version of solaris, you might as well #ifdef sun... but a quick google search says it's also on BSD. Is the include necessary on BSD too? (because this will add the include there too)

Flags: needinfo?(petr.sumbera)
Flags: needinfo?(landry)

per http://bxr.su/search?q=&defs=&refs=&path=ioccom.h it seems the header exists on all BSDs. It's included in various places, which explains why it wasn't needed to include it explicitely to fix bug #1840272.

Flags: needinfo?(landry)

I have checked Solaris 10u11 and it's there. It also contains prettly old copyrights:
Copyright (c) 1984, 1986, 1987, 1988, 1989 AT&T

But for Firefox only Solaris 11.4 is relevant these days.

Flags: needinfo?(petr.sumbera)

(In reply to Landry Breuil (:gaston) from comment #2)

per http://bxr.su/search?q=&defs=&refs=&path=ioccom.h it seems the header exists on all BSDs. It's included in various places, which explains why it wasn't needed to include it explicitely to fix bug #1840272.

So it looks like we should include it if it's present.

Assignee: nobody → stransky
Status: NEW → ASSIGNED
Pushed by stransky@redhat.com: https://hg.mozilla.org/integration/autoland/rev/991811626f3c [Solaris] Include sys/ioccom.h if it's available for dmabuf operations r=glandium
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 117 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: