Bug 1844285 [Solaris] Include sys/ioccom.h if it's available for dmabuf operations r=glandium

Differential Revision: https://phabricator.services.mozilla.com/D182440